# aho

./: .aho-checkpoint.json  .aho.json  .gitignore  .mcp.json  .mcp.json.tpl  CHANGELOG.md  CLAUDE-iteration.md  CLAUDE-run.md  CLAUDE.md  COMPATIBILITY.md  GEMINI-iteration.md  GEMINI-run.md  GEMINI.md  MANIFEST.json  README.draft.md  README.md  aho-run-0.2.14.md  docker-compose.otel.yml  install.fish  patch_acceptance.py  patch_aggregator_test.py  patch_baseline.py  patch_cli.py  patch_cli_postflight.py  patch_cli_w8.py  patch_inventory.py  patch_lines.py  patch_mcp_inventory.py  patch_nemotron_inventory.py  patch_run_report.py  patch_server.py  pyproject.toml  run_acceptance_w2.py  run_acceptance_w3.py  run_acceptance_w5.py  run_acceptance_w8.py
.claude/: settings.json
app/: README.md  pubspec.yaml
app/test/: widget_test.dart
app/web/: index.html  manifest.json
artifacts/: council-models-0.2.14.md
artifacts/adrs/: 0001-phase-a-externalization.md  0002-nemoclaw-decision.md  0003-otel-scaffolding-posture.md  0004-iteration-close-confirm-redesign.md  0005-gemini-otel-asymmetry.md  ahomw-ADR-044.md  ahomw-ADR-045.md
artifacts/harness/: agents-architecture.md  aur-packages.txt  base.md  canonical_artifacts.yaml  components.yaml  dashboard-contract.md  design-template.md  (+12 more)
data/: aho_event_log.jsonl  fs_test.txt  gotcha_archive.json  known_hallucinations.json  mcp_readiness.json
pipeline/: README.md
templates/: otelcol-config.yaml
tests/: test_baseline_regression.py  test_council_inventory.py  test_council_status.py  test_dummy.py  test_lego_renderer.py
(+598 files in other folders)
